# api2cli

./: CHANGELOG.md  Cargo.toml  README.md
src/: error.rs  generator.rs  lib.rs  main.rs  runtime.rs  spec.rs
tests/: integration_test.rs
tests/fixtures/: openapi_v3.yaml  petstore_v2.json
