[package]
name = "api2cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Turn any OpenAPI/Swagger specification into a fully-functional CLI with one command"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Binlogo/api2cli"
homepage = "https://github.com/Binlogo/api2cli"
documentation = "https://docs.rs/api2cli"
keywords = ["openapi", "cli", "swagger", "rest", "codegen"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [".claude/", ".github/", "tests/fixtures/"]

[lib]
name = "api2cli"
path = "src/lib.rs"

[[bin]]
name = "api2cli"
path = "src/main.rs"

[dependencies]
clap = { version = "~4.5", features = ["derive", "cargo", "env", "string"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
indexmap = { version = "2.2", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
